--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "autoprefixer": "^9.5.0",
     "babel-loader": "^8.0.5",
     "css-loader": "^2.1.1",
+    "file-loader": "^3.0.1",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "less": "^3.9.0",
+    "less-loader": "^4.1.0",
     "node-sass": "^4.11.0",
     "postcss-loader": "^3.0.0",
     "sass-loader": "^7.1.0",
@@ -29,11 +32,14 @@
     "webpack-dev-server": "^3.2.1"
   },
   "dependencies": {
+    "antd": "^3.15.1",
+    "axios": "^0.18.0",
     "connected-react-router": "^6.3.2",
     "history": "^4.9.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
+    "react-grid-system": "^4.4.3",
     "react-redux": "^6.0.1",
     "react-router-dom": "^5.0.0",
     "redux": "^4.0.1",
