1. Add to favourites feature 2. README

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --watch-poll",
+    "start": "webpack-dev-server",
     "build": "webpack --mode production",
     "test": "jest"
   },
